@@ -6,6 +6,7 @@ Revision history for Perl extension AnyEvent.
         - smaller and faster AnyEvent::Util::fh_nonblocking.
         - when the (required!) Time::HiRes module is missing, AnyEvent
           did not fall back to built-in time properly.
+        - free detection code after detection and other memory optimisations.
 
 5.24  Tue Jan  5 11:39:43 CET 2010
 	- cygwin never reports errors from failed connects. 1.5 just gives
